--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,52 @@
 {
     "/enquiries.js": "/enquiries.js",
-    "/calender.js": "/calender.js"
+    "/calender.js": "/calender.js",
+    "/0.2bde2da76bea838d2c86.hot-update.js": "/0.2bde2da76bea838d2c86.hot-update.js",
+    "/0.31294419c7666043bd90.hot-update.js": "/0.31294419c7666043bd90.hot-update.js",
+    "/0.8305f48c042311af78f1.hot-update.js": "/0.8305f48c042311af78f1.hot-update.js",
+    "/0.1e7e84e6b32afd28ea0b.hot-update.js": "/0.1e7e84e6b32afd28ea0b.hot-update.js",
+    "/0.5026058fe29f6830357c.hot-update.js": "/0.5026058fe29f6830357c.hot-update.js",
+    "/0.695a3578bb0840d16b0c.hot-update.js": "/0.695a3578bb0840d16b0c.hot-update.js",
+    "/0.dc6e595c7e251bd6321e.hot-update.js": "/0.dc6e595c7e251bd6321e.hot-update.js",
+    "/0.e71b70c3793ff5911181.hot-update.js": "/0.e71b70c3793ff5911181.hot-update.js",
+    "/0.248f37fb8ee6087eb9e9.hot-update.js": "/0.248f37fb8ee6087eb9e9.hot-update.js",
+    "/0.470da73cdc6c71d74688.hot-update.js": "/0.470da73cdc6c71d74688.hot-update.js",
+    "/0.1a9139f71d085829bd6b.hot-update.js": "/0.1a9139f71d085829bd6b.hot-update.js",
+    "/0.c38a2dff810b62a8a12c.hot-update.js": "/0.c38a2dff810b62a8a12c.hot-update.js",
+    "/0.6c8f766ad0bb355c4524.hot-update.js": "/0.6c8f766ad0bb355c4524.hot-update.js",
+    "/0.351ecee8c6b44ed03bfd.hot-update.js": "/0.351ecee8c6b44ed03bfd.hot-update.js",
+    "/0.4027b7ee1339ca736ed9.hot-update.js": "/0.4027b7ee1339ca736ed9.hot-update.js",
+    "/0.c9c3608c8212b1de165c.hot-update.js": "/0.c9c3608c8212b1de165c.hot-update.js",
+    "/0.41accfd263f6a424951d.hot-update.js": "/0.41accfd263f6a424951d.hot-update.js",
+    "/0.6e5579c3a5b3f6c71693.hot-update.js": "/0.6e5579c3a5b3f6c71693.hot-update.js",
+    "/0.c1e2fbacbb4ee5b348da.hot-update.js": "/0.c1e2fbacbb4ee5b348da.hot-update.js",
+    "/0.0955e8f86092adf72107.hot-update.js": "/0.0955e8f86092adf72107.hot-update.js",
+    "/0.c54ad9279898f957c496.hot-update.js": "/0.c54ad9279898f957c496.hot-update.js",
+    "/0.29f237739d73705b6a7e.hot-update.js": "/0.29f237739d73705b6a7e.hot-update.js",
+    "/0.aab894c287d45ecb7154.hot-update.js": "/0.aab894c287d45ecb7154.hot-update.js",
+    "/0.6895f7d6dd492539f172.hot-update.js": "/0.6895f7d6dd492539f172.hot-update.js",
+    "/0.28e4be8f8cf0d3eaa64e.hot-update.js": "/0.28e4be8f8cf0d3eaa64e.hot-update.js",
+    "/0.613fba0497f0b835d1a5.hot-update.js": "/0.613fba0497f0b835d1a5.hot-update.js",
+    "/0.15a51ab69373957f1fd3.hot-update.js": "/0.15a51ab69373957f1fd3.hot-update.js",
+    "/0.da94fb5923455d01466d.hot-update.js": "/0.da94fb5923455d01466d.hot-update.js",
+    "/0.d360db7693d6dbb7814d.hot-update.js": "/0.d360db7693d6dbb7814d.hot-update.js",
+    "/0.f4035066efdd438afb94.hot-update.js": "/0.f4035066efdd438afb94.hot-update.js",
+    "/0.2fad9e67bcb8a2a27784.hot-update.js": "/0.2fad9e67bcb8a2a27784.hot-update.js",
+    "/0.74c76d97ee7e2bb17305.hot-update.js": "/0.74c76d97ee7e2bb17305.hot-update.js",
+    "/0.81746084a2745adc4037.hot-update.js": "/0.81746084a2745adc4037.hot-update.js",
+    "/0.7c96972fd6c7750bf3c7.hot-update.js": "/0.7c96972fd6c7750bf3c7.hot-update.js",
+    "/0.6e2fb2769d2e056d2ada.hot-update.js": "/0.6e2fb2769d2e056d2ada.hot-update.js",
+    "/0.bc90159da3ca16b58199.hot-update.js": "/0.bc90159da3ca16b58199.hot-update.js",
+    "/0.f51b7272789006f3e09c.hot-update.js": "/0.f51b7272789006f3e09c.hot-update.js",
+    "/0.a5a7d7f4840ddcc28d01.hot-update.js": "/0.a5a7d7f4840ddcc28d01.hot-update.js",
+    "/0.0cd96b6f00c93dab1017.hot-update.js": "/0.0cd96b6f00c93dab1017.hot-update.js",
+    "/0.446dc8a1d64d5a6ad144.hot-update.js": "/0.446dc8a1d64d5a6ad144.hot-update.js",
+    "/0.1ea37374930e4c0c4966.hot-update.js": "/0.1ea37374930e4c0c4966.hot-update.js",
+    "/0.bf0e06d7a1c1dcf01397.hot-update.js": "/0.bf0e06d7a1c1dcf01397.hot-update.js",
+    "/0.cc851f591b354fb96eb0.hot-update.js": "/0.cc851f591b354fb96eb0.hot-update.js",
+    "/0.5bb2204c42de58fa3cf0.hot-update.js": "/0.5bb2204c42de58fa3cf0.hot-update.js",
+    "/0.a0437e5962098fe22607.hot-update.js": "/0.a0437e5962098fe22607.hot-update.js",
+    "/0.4276ef60dc166c7c31d3.hot-update.js": "/0.4276ef60dc166c7c31d3.hot-update.js",
+    "/0.60fa29835bf8c14c488e.hot-update.js": "/0.60fa29835bf8c14c488e.hot-update.js",
+    "/0.39d4403e030c5cd8fdb5.hot-update.js": "/0.39d4403e030c5cd8fdb5.hot-update.js"
 }
